--- a/WEll/styles.css
+++ b/WEll/styles.css
@@ -1,4 +1,3 @@
-/* Reset */
 * {
   margin: 0;
   padding: 0;
@@ -53,7 +52,7 @@ h1 {
 .card p {
   font-size: 16px;
   line-height: 1.6;
-  color: #666; /* Серый цвет текста */
+  color: #666;
   margin-bottom: 20px;
 }
 
@@ -80,25 +79,24 @@ footer a {
   text-decoration: underline;
 }
 
-/* Адаптивность для мобильных устройств */
 @media (max-width: 768px) {
   .container {
-    grid-template-columns: 1fr; /* Один блок в ряд */
+    grid-template-columns: 1fr;
   }
 
   h1 {
-    font-size: 36px; /* Уменьшаем заголовок на мобильных */
+    font-size: 36px;
   }
 
   .card h2 {
-    font-size: 36px; /* Уменьшаем размер цифр */
+    font-size: 36px;
   }
 
   .card p {
-    font-size: 14px; /* Уменьшаем размер текста */
+    font-size: 14px;
   }
 
   .button {
-    font-size: 14px; /* Уменьшаем размер кнопки */
+    font-size: 14px;
   }
 }
